Add indicators of hidden score to API and HTML
If the score is hidden, data-ups and data-downs will both be 0, and
the comment will also have the "score-hidden" class

--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -34,7 +34,11 @@
 ##################
 
 <%def name="thing_data_attributes(what)" buffered="True">
-${parent.thing_data_attributes(what)} data-ups="${what.upvotes}" data-downs="${what.downvotes}"
+  %if what.score_hidden:
+    ${parent.thing_data_attributes(what)} data-ups="0" data-downs="0"
+  %else:
+    ${parent.thing_data_attributes(what)} data-ups="${what.upvotes}" data-downs="${what.downvotes}"
+  %endif
 </%def>
 
 <%def name="midcol(display=True, cls = '')">
