Tighten up login box checkbox spacing.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2102,9 +2102,14 @@ li.searchfacet {
 
 .user-form .remember {
     display: inline;
-    margin-left: 5px;
+    margin-left: 2px;
     text-transform: lowercase;
 }
+
+.user-form input[type=checkbox] {
+    vertical-align: bottom;
+}
+
 .user-form ul { margin: 7px; }
 .user-form li { margin-top: 5px; }
 .user-form p .btn { margin-top: 5px }
