Don't position:fixed the login/language popups.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2179,10 +2179,11 @@ li.searchfacet {
 }
 
 .popup {
-    position: fixed;
+    position: absolute;
     left: 10%;
     background-color: white;
-    top: 40px;
+    top: 0;
+    margin-top: 40px;
     width: 80%;
     text-align: left;
     z-index: 1001;
