--- a/r2/r2/templates/login.html
+++ b/r2/r2/templates/login.html
@@ -83,7 +83,7 @@
           </i></label>
           <input value="" name="email" id="email_${op}" 
                  type="email" maxlength="50" tabindex="${tabindex}"/>
-          <label for="email_${op}" class="note">${_('we will only send email at your request')}</label>
+          <label for="email_${op}" class="note">${_('we only send email at your request')}</label>
           %if register:
             ${error_field("BAD_EMAILS", "email", kind="span")}
           %endif
