Feedback page: new arrow and margins
It is now slightly less hideous

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2922,11 +2922,12 @@ button.button[disabled] {
 }
 
 .feedback.instructions dt { 
-    margin-top: 10px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .feedback.instructions dd:before { 
-    background-image: url(../red-arrow.png); /* SPRITE */
+    background-image: url(../continue-thread.png); /* SPRITE */
     height: 15px;
     width: 30px;
     display: block;
