Fix scope mixup in template.

--- a/r2/r2/templates/login.html
+++ b/r2/r2/templates/login.html
@@ -149,7 +149,7 @@
     </p>
     %if registration_info:
       <div class="registration-info">
-        ${thing.registration_info}
+        ${registration_info}
       </div>
     %endif
     ${lf(register=True, user=user_reg, dest=dest)}
