Add a tool for generating subreddit traffic reports.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4098,6 +4098,28 @@ ul.tabmenu.formtab {
     font-variant: small-caps;
 }
 
+.traffic-table caption .normal {
+    font-weight: normal;
+    font-size: small;
+    font-variant: normal;
+    margin-left: .5em;
+}
+
+.traffic-form {
+    float: left;
+    margin-right: 10em;
+
+    p {
+        font-size: small;
+        margin-bottom: 1em;
+        max-width: 20em;
+    }
+
+    textarea {
+        display: block;
+    }
+}
+
 .traffic-table a:hover { text-decoration: underline; }
 .traffic-table thead th { font-weight: bold; text-align: center; padding-left: 2em;}
 .traffic-table thead th:first-child { text-align: left; padding-left: 0; }
