--- a/r2/r2/templates/sitewidetraffic.html
+++ b/r2/r2/templates/sitewidetraffic.html
@@ -30,7 +30,7 @@
   ${parent.sidetables()}
 
   <table class="traffic-table">
-  <caption>${_("top subreddits")}</caption>
+  <caption>${_("top subreddits")} <span class="normal">(<a href="/traffic/subreddits/report">${_("make report")}</a>)</span></caption>
   <thead>
   <tr>
     <th scope="col">${_("subreddit")}</th>
