Add a reddiquette link to the comment form.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3804,10 +3804,11 @@ ul.tabmenu.formtab {
     margin: 5px 5px 10px 0;
 }
 
-.usertext .help-toggle {
+.usertext .help-toggle, .usertext a.reddiquette {
     font-size: smaller;
     float:right;
     margin-top: 5px; 
+    margin-left: 10px;
 }
 
 .usertext .bottom-area {
