Sell campaigns by CPM.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4303,12 +4303,15 @@ ul.tabmenu.formtab {
     border-bottom: none;
 }
 
-.targeting > ul {  
+.campaign .notes ul {  
     font-size: x-small;
     list-style-type: disc; 
     margin: 0 20px 10px; 
 }
-.existing-campaigns td > button { margin: 0px 5px 0px 0px;  }
+.existing-campaigns td > button {
+    margin: 2px;
+    padding: 2px 4px;
+}
 
 .campaign .bid-info { font-size: x-small; }
 .campaign .bid-info.error { color: red; }
@@ -4319,7 +4322,7 @@ ul.tabmenu.formtab {
 .campaign #bid {
     text-align: right;
 }
-.campaign .targeting {
+.campaign .targeting, .campaign .notes {
     margin-left: 25px; 
 }
 .campaign .targeting input{
@@ -4345,6 +4348,13 @@ ul.tabmenu.formtab {
     .linefield-content .infotext p {
         margin:  5px;
     }
+
+#campaign td,
+#campaign span,
+#campaign label,
+#campaign li {
+    font-size: small;
+}
 
 /***traffic stuff***/
 .traffic-table,
@@ -4961,6 +4971,10 @@ table.lined-table {
     font-weight: bold; 
 }
 
+div #campaign-field {
+  width: auto;
+}
+
 .create-promotion .help { 
     font-size: x-small;
 }
@@ -4977,7 +4991,12 @@ table.lined-table {
 }
 
 
-.create-promo { float: left; width: 520px; margin-right: 20px;} 
+.create-promo {
+    float: left;
+    width: 570px;
+    margin-right: 20px;
+}
+
 .create-promo .infobar { 
     margin-right: 0; 
     border-color: red;
@@ -4991,6 +5010,11 @@ table.lined-table {
     list-style-type: disc; 
 }
 .create-promo .rules { float:  left; margin-left:  15px; }
+
+.create-promo textarea,
+.create-promo input[type=text] {
+    width: 98%;
+}
 
 .fancy-settings h1, .create-promotion h1 { font-size: 200%; color: #999; margin:10px 5px; }
 .fancy-settings h2 { font-size: 200%; font-weight:normal; color: #999; margin:10px 5px; }
